--- a/indexStyle.css
+++ b/indexStyle.css
@@ -27,7 +27,9 @@ h2{
 
 .tab{
 	overflow: hidden;
-	border: 3px solid #adb9c9;
+	border-left: 3px solid #adb9c9;
+	border-right: 3px solid #adb9c9;
+	border-top: 3px solid #adb9c9;
 	background-color: #adb9c9;
 }
 
@@ -48,14 +50,14 @@ h2{
 }
 
 .tab button.active{
-	background-color: #c1cdde;
+	background-color: white;
 }
 
 .tabcontent{
 	display:none;
 	
 	padding: 6px 12px;
-	border: 5px solid #adb9c9;
+	border: 3px solid #adb9c9;
 	
 	border-top: none;
 }
